[gd_scene load_steps=4 format=3 uid="uid://m3l72td58hqk"]

[ext_resource type="Script" path="res://lp_4_3.gd" id="1_t7dq4"]
[ext_resource type="Theme" uid="uid://os4yjvatm7cf" path="res://Button.tres" id="2_vfh0j"]
[ext_resource type="Theme" uid="uid://bkhm7mblj1udd" path="res://BigFont.tres" id="3_ehsdd"]

[node name="LP4-3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t7dq4")

[node name="Calc" type="Button" parent="."]
layout_mode = 0
offset_top = 576.0
offset_right = 254.0
offset_bottom = 652.0
theme = ExtResource("2_vfh0j")
text = "Calculate"

[node name="Clear" type="Button" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 570.0
offset_right = 699.0
offset_bottom = 646.0
theme = ExtResource("2_vfh0j")
text = "Clear"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 888.0
offset_top = 568.0
offset_right = 1142.0
offset_bottom = 644.0
theme = ExtResource("2_vfh0j")
text = "Quit"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 372.0
offset_top = 6.0
offset_right = 1154.0
offset_bottom = 88.0
theme = ExtResource("3_ehsdd")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 358.0
offset_bottom = 97.0
theme = ExtResource("3_ehsdd")
text = "Input number of eggs:"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = 110.0
offset_right = 1150.0
offset_bottom = 513.0
theme = ExtResource("3_ehsdd")
text = "Total price:"

[connection signal="pressed" from="Calc" to="." method="_on_calc_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
